--- a/pages/acciones.html
+++ b/pages/acciones.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous"> 
     <link rel="stylesheet" href="../css/estilo.css">
     <title>Acciones</title>
 </head>
@@ -16,18 +17,21 @@
             <img class="logoverde" src="../assets/img/bannersup2.jpg" alt="bannersup2">
         </div>
         <!--nav-->
-        <nav> 
-            <div>
-                <ul class="list">
-                    <li> <a href="../index.html">Inicio</a></li>
-                    <li> <a href="nosotros.html">Nosotros</a></li>
-                    <li> <a href="ubicacion.html">Ubicacion</a></li>
-                    <li> <a href="contacto.html">Contacto</a></li>
-                    <li> <a href="#">Acciones</a></li>
-                </ul>
+        <nav class="navbar-expand-lg">
+            <a class="navbar-brand" href="../index.html">Inicio</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav">
+                <li class="nav-item active"><a class="nav-link" href="nosotros.html">Nosotros <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Acciones</a></li>
+                <li class="nav-item"><a class="nav-link" href="ubicacion.html">Ubicacion</a></li>
+              </ul>
             </div>
-        </nav>
-
+          </nav>
     </header>
     <!-- fin del encabezado del sitio-->
     <!--inicio contenido-->
@@ -57,6 +61,10 @@
     <div class="direccionfooter">
         <h3>Guayaquil 755 C.A.B.A Buenos Aires CP 1045</h3>
     </div>
-    </footer>  
+    </footer> 
+<!-- scripts de bootstrap -->
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
+
 </body>
 </html>
