--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width, initial-scale=1.0">
     <title>contacto</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilo.css">
 </head>
 <body>
@@ -16,17 +17,25 @@
         <img class="logoverde" src="../assets/img/bannersup2.jpg" alt="bannersup2">
     </div>
     <!--nav-->
-    <nav> 
-        <div>
-            <ul class="list">
-                <li> <a href="../index.html">Inicio</a></li>
-                <li> <a href="nosotros.html">Nosotros</a></li>
-                <li> <a href="ubicacion.html">Ubicacion</a></li>
-                <li> <a href="#">Contacto</a></li>
-                <li> <a href="acciones.html">Acciones</a></li>
-            </ul>
+    <nav class="navbar-expand-lg">
+        <a class="navbar-brand" href="../index.html">Inicio</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="nosotros.html">Nosotros <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contacto</a></li>
+            <li class="nav-item">
+                <a class="nav-link" href="acciones.html">Acciones</a></li>
+            <li class="nav-item">
+              <a class="nav-link" href="ubicacion.html">Ubicacion</a></li>
+          </ul>
         </div>
-    </nav>
+      </nav>
 
 </header>
    </header>
@@ -61,5 +70,9 @@
         <h3>Guayaquil 755 C.A.B.A Buenos Aires CP 1045</h3>
     </div>
 </footer>
+<!-- scripts de bootstrap -->
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
+
 </body>
 </html>
