re entregada bootstrap

--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/estilo.css">
-    <title>UBICACION</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+  <link rel="stylesheet" href="../css/estilo.css">
+  <title>UBICACION</title>
 </head>
 <body>
      <!-- esto genera un comentario -->
@@ -17,25 +18,21 @@
     <img class="logoverde" src="../assets/img/bannersup2.jpg" alt="bannersup2">
 </div>
 <!--nav-->
-<nav class="navbar-expand-lg">
-    <a class="navbar-brand" href="../index.html">Inicio</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="nosotros.html">Nosotros <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="contacto.html">Contacto</a></li>
-        <li class="nav-item">
-            <a class="nav-link" href="acciones.html">Acciones</a></li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Ubicacion</a></li>
-      </ul>
-    </div>
-  </nav>
+<nav class="navbar navbar-expand-lg navbar-dark  background-color: rgba(0, 0, 0, 0.8)">
+  <a class="navbar-brand" href="#">Nuestras Manos</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item active"><a class="nav-link" href="../index.html">Inicio <span class="sr-only">(current)</span></a></li>
+      <li class="nav-item"><a class="nav-link" href="#">Ubicacion</a></li>
+      <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
+      <li class="nav-item"><a class="nav-link" href="nosotros.html">Ubicacion</a></li>
+      <li class="nav-item"><a class="nav-link" href="acciones.html">Acciones</a></li>
+   </ul>
+  </div>
+</nav>
 </header>
     <!-- fin del encabezado del sitio-->
     <!--inicio contenido-->
@@ -58,8 +55,8 @@
         </div>
         <!-- contacto-->
         <div class="direccionfooter">
-            <h3>Guayaquil 755 C.A.B.A Buenos Aires CP 1045</h3>
-        </div>    
+          <h3 class="direccion-responsive">Guayaquil 755 C.A.B.A Buenos Aires CP 1045</h3>
+      </div>
     </footer>  
 </body>
 <!-- scripts de bootstrap -->
