--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
+    <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Nuestras Manos</title>
+        <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
         <link rel="stylesheet" href="css/estilo.css">
-</head>
-    <body class="layoutheader">
+        <title>Nuestras Manos</title>
+    </head>
+    <body>
         <!-- bienvenido a nuestras manos encabezado-->
         <header>
             <!-- logo -->
@@ -16,19 +17,18 @@
                 <img class="logoverde" src="assets/img/bannersup2.jpg" alt="bannersup2">
             </div>
             <!--nav-->
-            <nav class="navbar-expand-lg">
-                <a class="navbar-brand" href="#">Inicio</a>
+            <nav class="navbar navbar-expand-lg navbar-dark  background-color: rgba(0, 0, 0, 0.8)">
+                <a class="navbar-brand" href="#">Nuestras Manos</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                   <ul class="navbar-nav">
-                    <li class="nav-item active">
-                      <a class="nav-link" href="pages/nosotros.html">Nosotros <span class="sr-only">(current)</span></a>
-                    </li>
+                    <li class="nav-item active"><a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a></li>
+                    <li class="nav-item"><a class="nav-link" href="pages/nosotros.html">Nosotros</a></li>
                     <li class="nav-item"><a class="nav-link" href="pages/contacto.html">Contacto</a></li>
-                    <li class="nav-item"><a class="nav-link" href="pages/acciones.html">Acciones</a></li>
                     <li class="nav-item"><a class="nav-link" href="pages/ubicacion.html">Ubicacion</a></li>
+                    <li class="nav-item"><a class="nav-link" href="pages/acciones.html">Acciones</a></li>
                   </ul>
                 </div>
               </nav>
@@ -58,7 +58,7 @@
             </div>
             <!-- contacto-->
             <div class="direccionfooter">
-                <h3>Guayaquil 755 C.A.B.A Buenos Aires CP 1045</h3>
+                <h3 class="direccion-responsive">Guayaquil 755 C.A.B.A Buenos Aires CP 1045</h3>
             </div>
         </footer>
         <!-- cierro footer-->
